Es wird langsam.

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,12 +1,11 @@
     <!-- About Section -->
-    <section id="about" class="container content-section text-center">
+    <section id="about" class="container content-section text-left">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>About Landing-Page</h2>
-                <p>Landing-Page is a free Bootstrap 3 theme created by Start Bootstrap. It can be yours right now, simply download the template on <a href="http://startbootstrap.com/template-overviews/landing-page/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
-                <p>The Jekyll version is brought to you by <a href="https://github.com/swcool">Shane Weng</a></p>
-                <p>This theme features stock photos by <a href="http://join.deathtothestockphoto.com//">Death to the Stock Photo</a>.</p>
-                <p>Landing-Page includes full HTML, CSS, and custom JavaScript files along with LESS files for easy customization.</p>
-            </div>
+                <h2>Über mich</h2>
+		<p><img class="textimgleft" src="img/mario_ava.jpg" alt="Profilbild" align="left" hspace="5" vpace="0"> 
+		Mein Name ist Mario Hommel und das hier ist mein kleines zu Hause im Internet. Ich bin im Jahr 1971 geboren und schon immer an Computertechnik interessiert. Seit Anfang der 90er bin ich im Internet unterwegs (kennt noch jemand <a href="http://de.wikipedia.org/wiki/Bildschirmtext" target="_blank">BTX</a>?). Seit 2006 ist mein <a href="http://blog.hommel-net.de/" >Blog</a> die zentrale Anlaufstelle meines Web-Universums.</p>
+		<p>Ich bin verheiratet und Papa von 2 Kindern. Beruflich arbeite ich als EDV-Organisator in einer kleinen Genossenschaftsbank. Aus meinem Berufsleben ergibt sich auch das ein oder anderen Thema für das Blog.</p>
+		<p>Seit vielen Jahren meide ich auf meinen privaten Rechnern das allgegenwärtige Betriebssystem aus Redmond und versuche mit alternativen Betriebssystemen zu arbeiten. Am Anfang war das noch OS/2 und seitdem IBM die Unterstützung eingestellt hat, bin ich nach und nach zu Linux gewechselt. Seit dem nutze im privaten Bereich hauptsächlich Open Source Software und unterstütze auch Schulen in meinem Landkreis bei z.B. beim Einsatz von Linux auf Schulservern.</p>
         </div>
     </section>
