--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -4,7 +4,10 @@
 
 			<div class="row">
 				<div class="col-lg-6">
-					<h2>Keep in Touch:</h2>
+					<h2>In Verbindung bleiben:</h2>
+					<p>
+					<a href="mailto:mario@hommel-net.de" class="btn btn-default btn-lg"><i class="fa fa-envelope fa-fw"></i> <span class="network-name">E-Mail schreiben</span></a>
+				</p>
 				</div>
 				<div class="col-lg-6">
 					<ul class="list-inline banner-social-buttons">
