--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,16 +9,25 @@
                     </li>
                     <li class="footer-menu-divider">&sdot;</li>
                     <li>
-                        <a href="#about">About</a>
+                        <a href="#about">Über mich</a>
                     </li>
                     <li class="footer-menu-divider">&sdot;</li>
                     <li>
-                        <a href="#services">Services</a>
+                        <a href="#projects">Projekte</a>
+                    </li>
+                    <li class="footer-menu-divider">&sdot;</li>
+                    <li>
+                        <a href="http://blog.hommel-net.de">Blog</a>
                     </li>
                     <li class="footer-menu-divider">&sdot;</li>
                     <li>
                         <a href="#contact">Contact</a>
                     </li>
+                    <li class="footer-menu-divider">&sdot;</li>
+ 		    <li>
+                        <a href="#impressum">Impressum</a>
+                    </li>
+
                 </ul>
                 <p class="copyright text-muted small">Copyright &copy; {{ site.title }} All Rights Reserved</p>
             </div>
