--- a/_includes/impressum.html
+++ b/_includes/impressum.html
@@ -1,7 +1,8 @@
 <!-- Impressum -->
 <section id="impressum">
-    <div class="container">
-	<div class="row"
+    <div class="container content-section text-left">
+	<div class="row">
+	<div class="col-lg-8 col-lg-offset-2">
 		<p><h2>Impressum</h2></p>
 		<h3>Eigent&uuml;mer der Seite</h3>
                  <p>Mario Hommel<br>
@@ -14,6 +15,7 @@
                    <p>Die Seite wird regelm&auml;ßig gepflegt, dennoch wird keine Haftung f&uuml;r die Richtigkeit und Aktualit&auml;t der Inhalte &uuml;bernommen.<br>
                    Verwendete Markennamen sind Eigentum der jeweiligen Hersteller.
                    </p>
+	</div>
 	</div>
     </div>
 </section>
