--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,7 +21,7 @@
                     </li>
                     <li class="footer-menu-divider">&sdot;</li>
                     <li>
-                        <a href="#contact">Contact</a>
+                        <a href="#contact">Kontakt</a>
                     </li>
                     <li class="footer-menu-divider">&sdot;</li>
  		    <li>
@@ -30,9 +30,6 @@
 
                 </ul>
                 <p class="copyright text-muted small">Copyright &copy; {{ site.title }} All Rights Reserved</p>
-            </div>
-            <div class="col-md-4">
-                Credits: Landing Page is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com/">Start Bootstrap</a>.
             </div>
         </div>
     </div>
