Update und wir brauchen eine Datenschutzerklärung.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -25,7 +25,7 @@
                     </li>
                     <li class="footer-menu-divider">&sdot;</li>
  		    <li>
-                        <a href="#impressum">Impressum</a>
+                        <a href="#impressum">Impressum/Datenschutz</a>
                     </li>
 
                 </ul>
