--- a/_includes/header.html
+++ b/_includes/header.html
@@ -27,7 +27,7 @@
                     <a class="page-scroll" href="#contact">Kontakt</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#impressum">Impressum</a>
+                    <a class="page-scroll" href="#impressum">Impressum/Datenschutz</a>
                 </li>
             </ul>
         </div>
